cmake: add cpack to create binary packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,3 +100,20 @@ INSTALL (
   TARGETS ${LOG4CPP_LIBRARY_NAME}
   ARCHIVE DESTINATION lib
   )
+
+
+ SET(CPACK_PACKAGE_NAME "log4cpp")
+ SET(CPACK_PACKAGE_VENDOR "Andrej Rode")
+ SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "log4cpp package")
+ SET(CPACK_PACKAGE_VERSION "1.1.1dev")
+ SET(CPACK_PACKAGE_VERSION_MAJOR "1")
+ SET(CPACK_PACKAGE_VERSION_MINOR "1")
+ SET(CPACK_PACKAGE_VERSION_PATCH "1")
+ SET(CPACK_COMPONENTS_ALL include lib)
+
+ LIST(APPEND CPACK_GENERATOR "ZIP")
+ if (MSVC)
+   LIST(APPEND CPACK_GENERATOR "NSIS")
+ ENDIF()
+
+ include(CPack)
